# ai-software-agency

./: CLAUDE.md  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: ceo.md  delegate-agent.md  fullstack-developer.md  product-manager.md  qa-lead.md  uiux-designer.md
agents/bonus/: bonus-studio-coach.md
agents/engineering/: engineering-expo-expert.md  engineering-github-operator.md  engineering-laravel-engineer.md  engineering-php-engineer.md  engineering-react-native-engineer.md  engineering-test-writer-fixer.md  engineering-tooling-installer.md
agents/project-management/: project-management-project-shipper.md
agents/specialized/: specialized-agent-builder.md  specialized-skill-builder.md
config/: AGENTS.md
hooks/: hooks.json
scripts/: export-agency.sh  init-agency.sh
skills/budget-check/: SKILL.md
skills/ceo/: SKILL.md
skills/create-skill/: SKILL.md
skills/feasibility-check/: SKILL.md
skills/fullstack-developer/: SKILL.md
skills/goal-tree/: SKILL.md
skills/governance-gate/: SKILL.md
skills/hire-agent/: SKILL.md
skills/install-tooling/: SKILL.md
skills/memory-sync/: SKILL.md
skills/pr-review/: SKILL.md
skills/product-manager/: SKILL.md
skills/qa-lead/: SKILL.md
skills/research-sparring/: SKILL.md
skills/specialists/paid-media/: paid-media-auditor.md  paid-media-ppc-strategist.md  (+5 more)
skills/start-project/: SKILL.md
skills/task-checkout/: SKILL.md
skills/testcase-generate/: SKILL.md
skills/uiux-designer/: SKILL.md
templates/: agency-config.json  design-spec-template.md  design-tokens-template.md  prd-template.md  test-plan-template.md
(+224 files in other folders)
